# reversi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  board.c  board.h  main_auto.c  main_cui.c  main_gui.c  main_search.c  search.c  search.h  turns.c  turns.h
test/: CMakeLists.txt  benchmark.c  board_test.c  test.c  test.h  turns_test.c
